Add TBS: Delete line separators to pqHelp

--- a/pqHelp.html
+++ b/pqHelp.html
@@ -339,6 +339,7 @@ the section as far to the left as possible leaving a 2-space indent.</p>
 However you can preview reflow while these are still in place by setting
 the controls on the right center. For example if &lt;sc> markup will
 be converted to uppercase, set the control to treat this markup as 0 length.</p>
+<p>TBS: controls for removing line separators interactively.</p>
 <h2>The Footnote Panel</h2>
 <p>TBS Mucho! Controls for validating and formatting footnotes.</p>
 <h2>The HTML Panel</h2>
