Updated help with info on the line number widget.

--- a/pqHelp.html
+++ b/pqHelp.html
@@ -45,6 +45,11 @@ the Pngs panel.</p>
 It uses a monospaced font, defaulting to Deja Vu Mono (dejavu-fonts.org)
 or to Courier New, either of which is legible and has a full range
 of Unicode characters. Select View>Font... to select a preferred font, which will be remembered from session to session.</p>
+<p>Below the edit panel is a status area where activity messages appear
+from time to time. Bottom center is a line-number field displaying the
+line number of the edit cursor. Type a new number in
+that field and press Return to jump to a different line. Further to the
+right is a progress bar that shows the status of some long-running operations.</p>
 <h3>Selection</h3>
 <p>Select text
 by dragging, or by click then shift-click, or by doubleclick (word) or 
