Added info on the Words panel context menu to help.

--- a/pqHelp.html
+++ b/pqHelp.html
@@ -268,9 +268,18 @@ to filter the table to these categories:</p>
 </ul>
 <p>Doubleclick a word to load that word in the Find text and display
 the Find panel.</p>
-<p>TBS: a way to add a word to good-words and clear its X.
-TBS: a way to filter the table down to just first-harmonic matches
-to a word. TBS: detection of "suspects" that match except for case, hyphens or apostrophes.</p>
+<p>Right-click (Mac users: <b>control</b>-click) on a word in the first
+column to open a context menu with these options:</p>
+<ul>
+<li>Add to goodwords: Add the current word to the good-words list, where
+it will be saved with the metadata and never be shown as misspelt again.</li>
+<li>Similar words: Filter the word list to show only words that match the
+current word when letter case, hyphens, and apostrophes are ignored.</li>
+<li>First harmonic: Filter the word list to show only words that are
+within one character of difference from the current word.</li>
+</ul>
+<p>After viewing Similar words or First harmonic words, select
+All from the popup menu above the table to see all words again.</p>
 <h2>The Pages Panel</h2>
 <p>Click the Page tab to display the Pages panel. 
 This is a table showing the page separator information from the original
