Added User Button save/load support

--- a/pqHelp.html
+++ b/pqHelp.html
@@ -149,7 +149,7 @@ Before the replacement is done, a message is shown: "Replace <i>nn</i>
 occurrences of <i>find-text</i> with <i>repl-text</i>?" and you
 have the option of cancelling the operation. The replace-all 
 operation is a single undo/redo step.</p>
-<h3>Canned Searches</h3>
+<h3>User-defined Buttons</h3>
 <p>Below the Replace controls is an array of 24 pushbuttons. 
 Use these to store find/replace operations for re-use.
 To store an operation, right-click (Mac users: <b>control</b>-click)
@@ -158,11 +158,14 @@ When you do so and click OK, that label is assigned to the button,
 and the state of all the find/replace controls&mdash;all checkboxes
 and entry fields&mdash;is stored in that button. Whenever you want to
 repeat that search, click the button to set all the find/replace
-controls to the stored settings.</p>
-<p>The current button settings are remembered from session to session.</p>
-<p>TBS: a way will be provided to save the entire set of buttons to
-a text file, and to load a new set of buttons from a text file. In this
-way we can distribute especially clever find/replace setups.</p>
+controls to the stored settings. The current button settings are remembered from session to session.</p>
+<p>To save the button settings to a file select File>Save Find Buttons. Provide the name and location for the saved file, which will be saved with UTF-8 encoding (a suffix of .utf is recommended). In the saved file each non-empty button is represented on a single line.</p>
+<p>To load button settings from a file, select File>Load Find Buttons.
+Any button definitions in the file are assigned to the buttons.
+The intent of saving and loading buttons is to be able to save
+and re-use complex search operations, and exchange them with other
+users. The file syntax is documented elsewhere.</p>
+<p></p>
 <h3>Regex Syntax</h3>
 <p>The Qt regex support is similar to but has fewer features than the Perl regexes used in guiguts. The following forms are used to match text.</p>
 <table border='1'>
@@ -276,9 +279,13 @@ it will be saved with the metadata and never be shown as misspelt again.</li>
 <li>Similar words: Filter the word list to show only words that match the
 current word when letter case, hyphens, and apostrophes are ignored.</li>
 <li>First harmonic: Filter the word list to show only words that are
-within one character of difference from the current word.</li>
+within one edit of difference from the current word.</li>
+<li>Second harmonic: Show only words that are within one or two edits
+of the current word.</li>
 </ul>
-<p>After viewing Similar words or First harmonic words, select
+<p>Use Similar words to find inconsistent use of hyphens. Use
+First and Second Harmonic to find likely misspellings of a word.
+After viewing Similar or First or Second Harmonic, select
 All from the popup menu above the table to see all words again.</p>
 <h2>The Pages Panel</h2>
 <p>Click the Page tab to display the Pages panel. 
