--- a/pqHelp.html
+++ b/pqHelp.html
@@ -19,7 +19,7 @@ Qt is quite consistent in these mappings.</p>
 <p>PPQT edits one text file at a time; call it <i>bookname</i><b>.</b><i>sfx</i>, for example <tt>foobar.utf</tt>.
 <h3>File Encodings and Suffixes</h3>
 <p>PPQT is entirely Unicode internally. The text file is converted to Unicode
-on input, based on the file suffix:</p>
+on input, based on the file suffix, as follows:</p>
 <table border='1'>
 <tr><td><tt>.txt</tt></td><td>Latin-1 or 7-bit Ascii (PPQT cannot distinguish between these)</td></tr>
 <tr><td><tt>.utf</tt></td><td>UTF-8 encoding of Unicode. Use for any text with non-latin characters</td></tr>
@@ -29,7 +29,7 @@ on input, based on the file suffix:</p>
 <tr><td><tt>.kir</tt></td><td>KOI8-R, Cyrillic-Russian.</td></tr>
 <tr><td><tt>.kiu</tt></td><td>KOI8-U, Cyrillic-Ukranian.</td></tr>
 </table>
-<p>When saving, you should use <tt>.txt</tt> or <tt>.utf</tt>, none of the others.</p>
+<p>When saving, you should use <tt>.txt</tt> or <tt>.utf</tt>. However PPQT will save to any of the above encodings based on the file suffix of the output file.</p>
 <h3>Metadata</h3>
 When opening <i>bookname</i><b>.</b><i>sfx</i>, PPQT looks for a file named <i>bookname</i><b>.</b><i>sfx</i><b>.</b><tt>meta</tt>
 in the same directory, for example <tt>foobar.utf.meta</tt>. If the meta file
@@ -209,7 +209,8 @@ the matching text for use in replacements. Any expression <i>E</i> can be quanti
 text: <tt>(?:The color is)\s(red|green|blue)</tt> can only match a string
 that begins "The color is" but the first capture, <b>\\1</b>, is what 
 matched <tt>(red|green|blue)</tt>. Also supported: lookahead tests
-with <b>(?=</b><i>E</i><b>)</b> and <b>(?!</b><i>E</i><b>)</b>.</p>
+with <b>(?=</b><i>E</i><b>)</b> and <b>(?!</b><i>E</i><b>)</b>. However
+the lookbehind tests of Perl regexes are not supported.</p>
 <p>Note: owing to some tricks PPQT plays with the Qt regex support, 
 the caret and dollar codes, which usually match at beginning and end
 of a line, only match at beginning and end of the document or
