--- a/extras/header.html
+++ b/extras/header.html
@@ -1,13 +1,26 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1" />
+    <meta http-equiv="Content-Style-Type" content="text/css" />
+    <title>
+      The Project Gutenberg eBook of BOOK TITLE HERE! by AUTHOR HERE!.
+    </title>
+    <style type="text/css">
+/*<![CDATA[  XML blockout */
+<!--
 /* ************************************************************************
  * Different browsers have different defaults when loading a new page. The
  * following CSS Reset makes all browsers start out with the same properties.
- * This reset is by Eric Meyer, see http://meyerweb.com/eric/tools/css/reset/
- * v2.0 | 20110126 License: none (public domain)
+ * This reset is based on one by Eric Meyer,
+ * see http://meyerweb.com/eric/tools/css/reset/ License: none (public domain)
  * ********************************************************************** */
 html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p,
-blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em,
-img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u,
-i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table,
+blockquote, a, abbr, acronym, address, big, cite, code, del, dfn, em,
+img, ins, kbd, q, s, samp, small, strong, var, u,
+dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table,
 caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details,
 embed, figure, figcaption, footer, header, hgroup,  menu, nav, output,
 ruby, section, summary, time, mark, audio, video {
@@ -19,22 +32,20 @@ ruby, section, summary, time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
-/* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu,
-nav, section {	display: block;  }
+nav, section {	display: block;  }/* HTML5 display-role for older browsers */
 body {	line-height: 1; }
-ol, ul { list-style: none; }
 blockquote, q { quotes: none; }
 blockquote:before, blockquote:after, q:before, q:after {
 	content: '';
 	content: none;
 }
 table { border-collapse: collapse; border-spacing: 0; }
-/* End of Eric Meyer CSS Reset */
+/* End of CSS Reset */
 /* ************************************************************************
  * set the body margins to allow whitespace along sides of window
  * ********************************************************************** */
-body { margin-left:5%; width:90%; /* == margin-right:5% */ }
+body { margin-left:4%; width:90%; /* == margin-right:6% */ }
 /* ************************************************************************
  * set the indention, spacing, and leading for ALL paragraphs
  * ********************************************************************** */
@@ -43,20 +54,21 @@ p {
 	margin-bottom: 0;	/* use only top-margin for spacing */
 	line-height: 1.4em;	/* interline spacing ("leading") */
 }
+/* para with bigger top margin - can be used to implement a thought break */
+p.break { margin-top: 2em; }
 /* ************************************************************************
- * Style the spacing and leading of all text paragraphs
+ * Style text paragraphs, not e.g. quotes or table cells
  * ********************************************************************** */
-body > p { /* body paragraphs only, not those in e.g. quotes or tables */
+body > p {
 	text-align: justify; /* or left?? */
 	text-indent: 2em;	/* first-line indent */
 }
-h2+p, h3+p, h4+p {	/* suppress indentation on paragraphs following heads */
+/* suppress indentation on paragraphs following heads and in tables */
+h2+p, h3+p, h4+p, td, td > p {	
 	text-indent: 0;
 }
-/* para with bigger top margin - can be used to implement a thought break */
-p.break { margin-top: 2em; }
 /* tighter spacing for list item paragraphs */
-dd, li {
+dd, li, li > p {
 	margin-top: 0.25em;
 	margin-bottom:0;
 	line-height: 1.2em; /* a bit closer than p's */
@@ -66,7 +78,8 @@ dd, li {
  * ********************************************************************** */
 .smcap {font-variant: small-caps;}
 /* ************************************************************************
- * Mark corrected typos with <ins class="correction" title="TN text">
+ * Mark corrected typo with:
+ *  <ins class="correction" title="Original: typu">typo</ins>
  * ********************************************************************** */
 ins.correction {
 	text-decoration:none; /* replace default underline.. */
@@ -76,21 +89,22 @@ ins.correction {
  * Head 2 is for chapter heads. 
  * ********************************************************************** */
 h2 {
-	/* text-align:center;	left-aligned by default. */
 	margin-top:3em;			/* extra space above.. */
 	margin-bottom: 2em;		/* ..and below */
 	clear: both;			/* don't let sidebars overlap */
-	/* font-weight: bold; ? letter-spacing: 3px; ? */
+	font-size: 133%;		/* larger font than body */
+	/* font-weight: bold;      match book */
+	/* letter-spacing: 3px;    older books often have loose headers */
+	/* text-align:center;	   left-aligned by default. */
 }
 /* ************************************************************************
  * Head 3 is for section heads (delete if book has none)
  * ********************************************************************** */
 h3 {
-	/* text-align:center;  left-aligned by default. */
 	margin-top: 2em;	/* extra space above but not below */
-	font-weight: normal; /* override default of bold */
+	/* text-align:center;  left-aligned by default. */
+	/* font-weight: bold;  match the original */
 	clear: both;		/* don't let sidebars overlap */
-	/* font-weight: bold; ? */
 }
 /* ************************************************************************
  * Styling the default HR and some special-purpose ones.
@@ -100,7 +114,7 @@ h3 {
  * <hr class="double" /> cute double rule
  * ********************************************************************** */
 hr {
-	width:45%;			/* adjust to ape original work */
+	width:45%;			/* good size for a <tb> */
 	margin-top: 1em;	/* space above & below */
 	margin-bottom: 1em;
 	margin-left: auto;  /* these two ensure a.. */
@@ -121,8 +135,8 @@ hr.double { /* width and margins inherited from default rule */
  * Images and captions
  * ********************************************************************** */
 img { /* the default inline image has */
-	border: 1px solid black; /* a thin black line border.. */
-	padding: 6px; /* ..spaced a bit out from the graphic */
+	/* border: 1px solid black; a thin black line border.. */
+	/* padding: 6px; ..spaced a bit out from the graphic */
 } 
 img.plain { /* image with no border or padding, see float */
 	border: none; padding: 0;
@@ -130,9 +144,10 @@ img.plain { /* image with no border or padding, see float */
 p.caption {
 	margin-top: 0; /* snuggled up to its image */
 	font-size: smaller;
-	/* font-style: italic; or- font-variant:small-cap;  */
+	/* font-style: italic; 		match to orginal */
+	/* font-variant: small-caps;  */
 }
-p.right { /* date of a letter aligned right */
+.right { /* span, paragraph, etc with text aligned right */
 	text-align: right;
 }
 /* ************************************************************************
@@ -161,40 +176,12 @@ ol.RL { list-style-type: lower-roman; }
  * ********************************************************************** */
 .lsoff { list-style-type: none; }
 /* ************************************************************************
- * A Table Of Contents (or a List of Illustrations, or any other list
- * with titles opposite page numbers) is an unordered list with no bullets.
- * A nested sub-list is done by nesting another ul.TOC inside a the
- * main term's list item. The width: property is used instead of
- * margin-right: because width: triggers Internet Explorer 6 to behave
- * properly for the positioned page numbers.
- * ********************************************************************** */
-ul.TOC { /* TOC as a whole, or any sub-list of sub-topics in it */
-	list-style-type: none;  /* list with no symbol */
-	position: relative;		/* makes a "container" for span.tocright */
-	width: 85%;				/* page-number margin pulls in */
-	}
-.TOC p { /* paragraph of chapter abstract inside TOC list item */
-	font-size:90%;			/* one point smaller than body */
-	margin-top: 0;			/* tight vertical spacing */
-	margin-right: 4%;		/* pull in on right */
-}
-/* ************************************************************************
- * Surround a page# with this span to make it right-align within its
- * "container", the TOC or the LOI (see also Drama stylings)
- * ********************************************************************** */
-span.ralign { /* use absolute positioning to move page# right */
-	position: absolute;
-	right: 0; /* right edge against container's right edge */
-	top: auto; /* vertical align to original text baseline */
-}
-/* ************************************************************************
- * The Index is an un-marked list also. Because it does not act as a
- * container for right-aligned page numbers, it doesn't need a position
- * attribute. To make a sub-list of terms under a term, just nest
+ * The Index can be treated as a series of un-marked lists, one for each
+ * letter. To make a sub-list of terms under a term, just nest
  * <ul class="IX"> under the term.
  * ********************************************************************** */
 div.index { /* styles that apply to all text in an index */
-	font-size: 90%;  /*small type for compactness */
+	/* font-size: 90%;		smaller type? */
 }
 ul.IX {
 	list-style-type: none;
@@ -205,8 +192,6 @@ ul.IX {
 }
 /* ************************************************************************
  * Styling tables and their contents:
- *   settings for all tables.
- *   style text in body cells, with or w/o <p>'s inside <td>.
  *   automatic center/bold for header and footer cells.
  *   use class="shade" to put gray bg in a <tr> or a <td>.
  * ********************************************************************** */
@@ -248,7 +233,8 @@ p.citation { /* author citation at end of blockquote or poem */
 }
 p.signature { /* author signature at end of letter */
 	margin-left: 35%;
-	text-indent: -4em; /* gimmick to move 2nd line right */
+	text-indent: -4em; /* gimmick to move any 2nd line right */
+	/* font-variant: small-caps;  sometimes seen in signatures */
 }
 /* ************************************************************************
  * Generic floating images or sidebars: div or img class='floatr'
@@ -311,12 +297,13 @@ p.signature { /* author signature at end of letter */
  * <a ...class="fnanchor"> around [nn] in the body text
  * ********************************************************************** */
 .fnanchor { /* style the <a...>[nn]</a> reference in the body text */
-	font-size: 80%;			/* small - 2pts less than adjacent text */
+	font-size: 75%;		/* small - 2pts less than adjacent text */
 	text-decoration: none;	/* no underscore, blue color is enough */
-	vertical-align: 0.25em;	/* raise up from baseline a bit */
+	vertical-align: 0.33em;	/* raise up from baseline a bit */
 	/*background-color: #eee;  optional pale gray background */
 }
 .footnotes { /* style border and/or color around footnote block */
+	margin: 2em 1em 1em 1em;	/* set off from body */
 	/*border: dashed 1px gray;	optional border */
 	/*background-color: #EEE;	optional light background tint */
 	/*padding: 0 1em 1em 1em; 	optional indent note text from border */
@@ -404,18 +391,22 @@ div.poem { /* Style the entire poem */
  * the page numbers disappear.
  * ********************************************************************** */
 .pagenum { /* right-margin page numbers */
-	/*visibility:hidden		uncomment to hide the page numbers */
-	font-size:50%;		/* tiny type.. */
-	color: #444;		/* ..dark gray.. */
+	/*visibility:hidden	uncomment to hide the page numbers */
+	font-size:75%;		/* tiny type.. */
+	color: #222;		/* ..dark gray.. */
 	text-align: right;	/* ..right-justified.. */
-	width: 2.5em;		/* ..in space wide enuff for 999 */
 	position: absolute;	/* out of normal flow.. */
-	right: -2.5em;		/* ..in the right margin.. */
+	right: 0;		/* ..in the right margin.. */
 	padding: 0 0 0 0 ;	/* ..very compact */
-	margin: auto 0 auto 0;	
+	margin: auto 0 auto 0;
 	}
 .pagenum a {/* when pagenum is a self-reference link (see text)... */
 	text-decoration:none;	/* no underline.. */
 	color:#444;		/* same color as non-link */
 	}
 .pagenum a:hover { color:#F00; }/* turn red when hovered */
+
+/* XML end  ]]>*/
+    </style>
+  </head>
+<body>
