change link to Qt to the new open source site.

--- a/pqHelp.html
+++ b/pqHelp.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <h1>PPQT Information</h1>
-<p>PPQT is a tool for post-processing books for Project Gutenberg Distributed Proofreaders. PPQT is based on Qt by Nokia (qt.nokia.com). It is coded in Python using PQt4 (riverbankcomputing.co.uk). It is packaged for release using pyinstaller (pyinstaller.org).</p>
+<p>PPQT is a tool for post-processing books for Project Gutenberg Distributed Proofreaders. PPQT is based on Qt by Nokia (qt-project.org). It is coded in Python using PQt4 (riverbankcomputing.co.uk). It is packaged for release using pyinstaller (pyinstaller.org).</p>
 <h3>Licenses</h3>
 <p>Qt is licensed for noncommercial use under the LGPL.
 PyQt4 is licensed for noncommercial use under the GPL v2 and the GPL v3.
