Correct the doc of setting bookmarks to match the code.

--- a/pqHelp.html
+++ b/pqHelp.html
@@ -38,6 +38,7 @@ Attribution-NonCommercial-ShareAlike license.</p>
 <p>First a deep bow of respect to Steve Shulz (Thundergnat) who created and maintained Guiguts, the program from which PPQT takes inspiration and lots of ideas. Second, a genuflection  to Mark Summerfield for the book <i>Rapid GUI Developement with PyQt</i>.</p>
 <h3>Mac Users Note</h3><p> Throughout this Help, when you read <b>ctl-</b>
 you think <b>cmd-</b>. And when you read <b>alt-</b>, you think <b>opt-</b>.
+(For example, to set bookmark 1, you key cmd-opt-1 although the help says ctl-alt-1.)
 Qt is quite consistent in these mappings. However, when you see <b>control-</b>, that really means, the Control key.</p>
 <p>Try it now: key ctl-f for a simple Find dialog for searching in this help text.</p>
 <h2>Files and Folders</h2>
@@ -111,7 +112,7 @@ or copy text by alt-dragging. PPQT does not support rectangular selections or di
 <li>shift-ctl-t: replace selection and repeat find backward</li>
 <li>ctl-u, ctl-l, ctl-i: change selection to uppercase, lowercase, titlecase (Unicode compliant)</li>
 <li>ctl-1 through ctl-9: jump to bookmark 1-9</li>
-<li>shift-ctl-1 through shift-ctl-9: set bookmark 1-9 to cursor (bookmarks
+<li>ctl-alt-1 through ctl-alt-9: set bookmark 1-9 to cursor (bookmarks
 are saved in the metadata file)</li>
 </ul>
 <h3>Scanno Highlighting</h3>
