Define "back" keys in IMC, add a "back" function to HTML help.

--- a/pqHelp.html
+++ b/pqHelp.html
@@ -4,7 +4,7 @@ __author__  = "David Cortesi"
 __copyright__ = "Copyright 2011, 2012 David Cortesi"
 __maintainer__ = "?"
 __email__ = "tallforasmurf@yahoo.com"
-__status__ = "first-draft"
+__status__ = "first-html-draft"
 __license__ = '''
  License (GPL-3.0) :
     This file is part of PPQT.
@@ -45,6 +45,8 @@ The source code of PPQT is licensed under the GPL v3; see the file <tt>extras/CO
 <h2>Acknowledgements</h2>
 <p>First, a deep bow of respect to Steve Shulz (Thundergnat) who created and maintained Guiguts, the program from which PPQT takes its inspiration and lots of ideas. Second, a genuflection  to Mark Summerfield for the book <i>Rapid GUI Developement with PyQt</i> that showed how to build PPQT.</p>
 <h2>Contents</h2>
+<p>After clicking a link, use ctl-B or ctl-[ (control-left bracket) for
+the Back function.</p>
 <ul>
 <li><a href='#Files'>Files and Folders</a> says where PPQT looks for the book text, images, and related files.</li>
 <li><a href='#Main'>The Main Window</a> describes that.</li>
