Add a back function to the preview and document it

--- a/pqHelp.html
+++ b/pqHelp.html
@@ -611,12 +611,16 @@ this element of the HTML 4.0 standard is not supported by any browsers, so Decim
 <h2 id='View'>The Preview Panel</h2>
 <p>Click the Pvw tab to display the HTML Preview panel. Whenever
 you click the Refresh button on this panel, the complete contents of the
-Edit document are copied into this panel and displayed as HTML.
+Edit document are copied into this panel and displayed as HTML.</p>
+<p>The default font is set to Palatino and the initial text font size is set to 16 points. When the focus is in the Preview panel, you can key ctl-minus and ctl-plus to zoom to smaller and larger text font sizes.</p>
+<p>
 The HTML rendering is done by the open-source <a href='http://www.webkit.org'>WebKit engine</a>, the same HTML rendering code that is used by Apple's Safari and by KDE. It fully supports CSS and
 standard HTML code. Java and Javascript are disabled in the Preview panel, however.</p>
 <p>The base URL for image references is the base path of the book text file,
 so the <tt>images</tt> folder should be located at the same place as the book text.</p>
-<p>The default font is set to Palatino and the initial text font size is set to 16 points. When the focus is in the Preview panel, you can key ctl-minus and ctl-plus to zoom to smaller and larger text font sizes.</p>
+<p>If you click a link in the preview (for example, to open a high-resolution image)
+the browser follows the link and displays the linked page or image.
+To return to the book preview, key ctl-B or ctl-[ (control-left bracket).</p>
 <p>Key ctl-F in the Preview panel to open a simple Find dialog. Key ctl-G to search again for the found text.</p>
 <h2 id='Foot'>The Footnote Panel</h2>
 <p>TBS Mucho! Controls for validating and formatting footnotes.</p>
